--- a/index.html
+++ b/index.html
@@ -9,20 +9,29 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
 </head>
-<body>
+<body id="up">
 
     <header>
         <div class="container">
             <img src="assets/svg/logo_color.svg" alt="Logo BeeBox Agência" class="brand">
             <nav class="menu">
                 <ul>
-                    <li> <a href="javascript:;"> O que fazemos? </a> </li>
-                    <li> <a href="javascript:;"> Cases </a> </li>
-                    <li> <a href="javascript:;"> Clientes </a> </li>
+                    <li> <a href="#oquefazemos" class="scroll"> O que fazemos? </a> </li>
+                    <li> <a href="#cases" class="scroll"> Cases </a> </li>
+                    <li> <a href="#clientes" class="scroll"> Clientes </a> </li>
                 </ul>
             </nav>
-            <a href="javascript:;" class="cta"> Faça parte da transformação </a>
+            <a href="#cadastrar" class="cta scroll"> Faça parte da transformação </a>
         </div>
+
+        <!-- hamburger -->
+        <a href="#" class="menu-resp-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+        <!-- end hamburger -->
+
     </header> 
     <main>
         <div class="container">
@@ -30,7 +39,7 @@
                <div class="col-12 col-md-6">
                     <h1> Conteúdo<br> Criativo</h1>
                     <p> Construímos ótimas experiências para clientes incríveis.</p>
-                    <a href="javascript:;" class="link-scroll animate-flicker"> Role para baixo </a>
+                    <a href="#oquedefine" class="link-scroll animate-flicker scroll"> Role para baixo </a>
                </div>
                <div class="col-12 col-md-6">
                     <img src="assets/img/img_entrada.png" class="img-entrada" alt="">
@@ -39,13 +48,16 @@
         </div>
     </main>
 
+    <!-- Anchor element fixed -->
+    <a href="#up" class="scroll"><div class="element-fixed"></div></a>
+
     <section class="container">
-        <div class="content-1">
+        <div class="content-1" id="oquedefine">
             <div class="row">
-                <div class="col-12 col-md-3 define">
-                    <h2> O que define a BEEBOX? </h2>
+                <div class="col-12 col-md-4 col-lg-3 define">
+                    <h2> O que define <br> a BEEBOX? </h2>
                 </div>
-                <div class="col-12 col-md-9 items-define">
+                <div class="col-12 col-md-8 col-lg-9 items-define">
                     <ul>
                         <li> 
                             <img src="assets/svg/ico_criativo.svg" alt=""> 
@@ -75,10 +87,10 @@
         </div>
     </section>
 
-    <section class="content-2 container">
+    <section class="content-2 container" id="oquefazemos">
         <h2> O que fazemos? </h2>
         <div class="row">
-            <div class="col-12 offset-0 col-md-5 offset-md-1">
+            <div class="col-12 offset-0 col-md-6 col-lg-5 offset-lg-1">
                 <div class="servico">
                     <span class="ico-servico ico-servico-content-1"> 
                         <img src="assets/svg/ico_servico.svg" alt="">
@@ -90,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-5">
+            <div class="col-12 col-md-6 col-lg-5">
                 <div class="servico">
                     <span class="ico-servico ico-servico-content-2"> 
                         <img src="assets/svg/ico_servico.svg" alt="">
@@ -102,7 +114,7 @@
                 </div>
             </div>
 
-            <div class="col-12 offset-0 col-md-5 offset-md-1">
+            <div class="col-12 offset-0 col-md-6 col-lg-5 offset-lg-1">
                 <div class="servico">
                     <span class="ico-servico ico-servico-content-3"> 
                         <img src="assets/svg/ico_servico.svg" alt="">
@@ -114,7 +126,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-5">
+            <div class="col-12 col-md-6 col-lg-5">
                 <div class="servico">
                     <span class="ico-servico ico-servico-content-4"> 
                         <img src="assets/svg/ico_servico.svg" alt="">
@@ -129,7 +141,7 @@
         </div>
     </section> 
     
-    <section class="content-3 container">
+    <section class="content-3 container" id="cases">
         <h2> Cases </h2>
         <div class="row">
             <div class="col-12 col-md-6 case">
@@ -190,14 +202,14 @@
     <section class="cta-section">
         <div class="container">
             <h2> Quer sair da caixa? </h2>
-            <a href="javascript:;" class="cta"> Então vamos tomar um café :) </a>
+            <a href="#cadastrar" class="cta scroll"> Então vamos tomar um café :) </a>
         </div>
     </section>
 
-    <section class="content-4 container">
+    <section class="content-4 container" id="clientes">
         <h2> Veja o que os nossos clientes dizem </h2>
         <div class="row">
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 mb-5 pb-5">
                 <div class="comment">
                     <p> 
                         Mussum Ipsum, cacilds vidis litro abertis. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Cevadis im ampola pa arma uma pindureta. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl.
@@ -210,7 +222,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 mb-5 pb-5">
                 <div class="comment">
                     <p> 
                         Mussum Ipsum, cacilds vidis litro abertis. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Cevadis im ampola pa arma uma pindureta. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl.
@@ -223,7 +235,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 mb-5 pb-5">
                 <div class="comment">
                     <p> 
                         Mussum Ipsum, cacilds vidis litro abertis. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Cevadis im ampola pa arma uma pindureta. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl.
@@ -292,14 +304,14 @@
         </div>
     </section>
 
-    <section class="contact container-fluid">
+    <section class="contact container-fluid" id="cadastrar">
         <div class="row">
-            <div class="col-12 col-md-4 m-0 p-0">
+            <div class="col-12 col-md-4 m-0 p-0 div-img-contact">
                 <div class="img-contact"> 
                     <img src="assets/img/img_contato.png" alt="">
                 </div>
             </div>
-            <div class="col-12 offset-0 col-md-4 offset-md-2">
+            <div class="col-12 offset-0 col-md-5 offset-md-1 col-lg-6">
                 <div class="form"> 
                     <h2> Fale Conosco </h2>
                     <form action="" method="POST">
@@ -361,24 +373,35 @@
                 </ul>
             </div>
             <div class="info-footer-2">
-                <nav class="menu">
-                    <ul>
-                        <li> <a href="javascript:;"> O que fazemos? </a> </li>
-                        <li> <a href="javascript:;"> Cases </a> </li>
-                        <li> <a href="javascript:;"> Clientes </a> </li>
-                    </ul>
-                </nav>
-                <ul class="contatos">
-                    <li>
-                        <a href="#"> contato@beeboxagencia.com </a>
-                    </li>
-                    <li>
-                        <a href="#"> (11) - 90000-0000 </a>
-                    </li>
-                </ul>
+                <div class="row w-100">
+                    <div class="col-12 col-md-5">
+                        <nav class="menu">
+                            <ul>
+                                <li> <a href="javascript:;"> O que fazemos? </a> </li>
+                                <li> <a href="javascript:;"> Cases </a> </li>
+                                <li> <a href="javascript:;"> Clientes </a> </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-12 col-md-7">
+                        <ul class="contatos">
+                            <li>
+                                <a href="#"> contato@beeboxagencia.com </a>
+                            </li>
+                            <li>
+                                <a href="#"> (11) - 90000-0000 </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
+
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"> </script> -->
+    <script src="scripts/app.js"> </script>
     
 </body>
 </html>
