Final atts, readme image project

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <meta charset="UTF-8">
     <meta name="theme-color" content="#423c6d">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Agência de marketing digital. Impulsione os números de sua empresa: Conteúdo para redes sociais, campanhas, anúncios, consultoria de Marketing. " />
@@ -244,7 +245,7 @@
         </div>
     </section>
 
-    <section class="content-4 container" id="clientes">
+    <!-- <section class="content-4 container" id="clientes">
         <h2> Veja o que os nossos clientes dizem </h2>
         <div class="row">
             <div class="col-12 col-md-4 mb-5 pb-5">
@@ -287,7 +288,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
     <section class="content-5 container-fluid">
         <h2> Porque o marketing digital <br>está revolucionando o mercado? </h2>
@@ -435,6 +436,15 @@
             </div>
         </div>
     </footer>
+    <div class="container">
+        <div class="author col-12">
+            <span> Designed and developed by </span>
+            <a href="http://brunoqueiros.me" target="blank">
+                <img src="assets/svg/logo_bq.svg" alt="Logo do autor, desenvolvido por Bruno Queirós">
+            </a>
+        </div>
+    </div>
+    
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
