Att texts/responsive

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </span>
                     <h3> Criação de Conteúdo </h3>
                     <p> 
-                        Produção de materiais para Blogs que impulsionam o tráfico de seu site ou Tabloides de ofertas digital que destacam a sua marca. Não importa o seu nicho, a Bee Box te ajuda a sair fora da caixa.
+                        Produção de materiais para Blogs que impulsionam o tráfego de seu site ou Tabloides de ofertas digital que destacam a sua marca. Não importa o seu nicho, a Bee Box te ajuda a sair fora da caixa.
                     </p>
                 </div>
             </div>
@@ -296,7 +296,7 @@
             <div class="col-12 col-md-4">
                 <h3> 1 Milhão </h3>
                 <p> 
-                    de login por minuto são feitos no Facebook.
+                    de logins por minuto são feitos no Facebook.
                 </p>
             </div>
 
